# d4science-hub

./: CHANGELOG.md  Dockerfile  README.md  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: docker.yml  lint.yml  python.yml
d4science_hub/: __init__.py  authenticator.py  spawner.py
d4science_hub/services/: d4science_spawn.py
templates/: 401.html  home.html  login.html  logout.html
tests/: kubeconf.yaml  test_spawner.py
