[metadata]
name = d4science-hub 
summary = JupyterHub extensions for Notebooks in D4Science
description-file = 
	README.md
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
home-page = 
license = MIT 
classifier = 
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = d4science_hub

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[entry_points]
jupyterhub.authenticators =
    d4scienceauthenticator = d4science_hub.authenticator:D4ScienceOauthenticator
jupyterhub.spawners =
    d4sciencespawner = d4science_hub.spawner:D4ScienceSpawner
